# situbot

src/sagittarius_arm_ros/situbot/: CMakeLists.txt  README.md  package.xml  setup.py
src/sagittarius_arm_ros/situbot/config/: objects.yaml  situbench.yaml  situbench_zh.json  situbot_params.yaml
src/sagittarius_arm_ros/situbot/launch/: evaluation.launch  perception.launch  situbot_full.launch  situbot_sim.launch
src/sagittarius_arm_ros/situbot/msg/: ArrangementPlan.msg  DetectedObject.msg  DetectedObjects.msg  ObjectPlacement.msg  PlannedAction.msg
src/sagittarius_arm_ros/situbot/nodes/: evaluator_node.py  executor_node.py  perception_node.py  planner_node.py  reasoning_node.py
src/sagittarius_arm_ros/situbot/scripts/: analyze_results.py  run_single.py  run_situbench.py
src/sagittarius_arm_ros/situbot/src/situbot/: __init__.py
src/sagittarius_arm_ros/situbot/src/situbot/evaluation/: __init__.py  metrics.py  roundtrip.py
src/sagittarius_arm_ros/situbot/src/situbot/execution/: __init__.py  moveit_executor.py
src/sagittarius_arm_ros/situbot/src/situbot/perception/: __init__.py  detector.py  hsv_fallback.py
src/sagittarius_arm_ros/situbot/src/situbot/planning/: __init__.py  collision_checker.py  sequence_planner.py
src/sagittarius_arm_ros/situbot/src/situbot/reasoning/: __init__.py  llm_client.py  prompts.py  situation_reasoner.py
src/sagittarius_arm_ros/situbot/src/situbot/utils/: __init__.py  transforms.py  (+1 more)
src/sagittarius_arm_ros/situbot/srv/: EvaluateScene.srv  GetArrangement.srv
src/sagittarius_arm_ros/situbot/test_data/data/: input.txt
(+1 files in other folders)
